--- a/CITATION.bib
+++ b/CITATION.bib
@@ -1,7 +1,6 @@
 @misc{EntropyHub.jl,
 	author  = {Matthew W. Flood},
 	title   = {EntropyHub: an open-source toolkit for entropic time series analysis},
-	url     = {https://github.com/MattWillFlood},
-	version = {v0.1.0},
+	url     = {https://www.EntropyHub.xyz},
 	year    = {2021},
 }
