--- a/CITATION.bib
+++ b/CITATION.bib
@@ -1,6 +1,12 @@
 @misc{EntropyHub.jl,
-	author  = {Matthew W. Flood},
-	title   = {EntropyHub: an open-source toolkit for entropic time series analysis},
-	url     = {https://www.EntropyHub.xyz},
+	title   = {EntropyHub: An Open-source Toolkit for Entropic Time Series Analysis},
+	author  = {Flood, Matthew W. and Grimm, Bernd},
+	journal = {PLoS ONE},
+	volume  = {16},
+	number  = {11},
+	pages   = {e0259448},
 	year    = {2021},
-}
+	publisher = {Public Library of Science},
+	doi     = {10.1371/journal.pone.0259448},
+	url     = {https://doi.org/10.1371/journal.pone.0259448},
+	}
